awgn: converted from A (amplitude) to P (power)

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -58,7 +58,7 @@ Version 0.0}
 
 
 \begin{itemize}
-\item Code author: Y. Polyanskiy \url{<yp@mit.edu>}
+\item Maintainer: Y. Polyanskiy \url{<yp@mit.edu>}
 
 \item Main references: \cite{PPV08,PPV10eneff}
 
@@ -97,7 +97,7 @@ Inputs:
 
 \cprotect\section{Converse: \verb|wolfowitz()|}
 
-\cprotect\section{Normal approximation: \verb|normapx()|}
+\cprotect\section{Normal approximation: \verb|normapx_awgn()|, \verb|normapx_biawgn()|}
 
 \cprotect\section{Code database: \verb|plot_universe()|}
 
