awgn: normapx_*() functions added
plot_universe() updated to use them

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -57,12 +57,15 @@ Version 0.0}
 \chapter{AWGN channel}
 
 
+General info:
 \begin{itemize}
 \item Maintainer: Y. Polyanskiy \url{<yp@mit.edu>}
 
 \item Main references: \cite{PPV08,PPV10eneff}
 
 \item Example: See Fig.~\ref{fig:awgn_example} 
+
+\item All functions return values in base-2 units, e.g. $\log_2 M$.
 \end{itemize}
 
 
