--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -7,14 +7,14 @@
 
 
 @article{PPV08,
-	author = "Y. Polyanskiy and H.~V.~Poor and " # SV,
+	author = "Y. Polyanskiy and H.~V.~Poor and Sergio Verd\'u",
 	title = "Channel coding rate in the finite blocklength regime",
 	journal = IEEE_J_IT, volume = 56, number = 5, month = may, pages="2307--2359",
 	year = 2010
 }
 
 @article{PPV10eneff,
-	author = "Y. Polyanskiy and H.~V.~Poor and " # SV,
+	author = "Y. Polyanskiy and H.~V.~Poor and Sergio Verd\'u",
 	title = "Minimum energy to send $k$ bits with and without feedback",
 	journal = IEEE_J_IT, 
 	month=aug, year=2011,number=8, volume=57, pages={4880--4902}
