--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -1,21 +1,50 @@
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
-@string{BSTJ = {Bell Syst. Tech. J.}}
-@string{INFCONTR = {Inf. Contr.}}
-@string{ISIT = {IEEE Int. Symp. Inf. Theory (ISIT)}}
-@string{J_PPI = {Prob. Peredachi Inform.}}
-@string{CISS = {Conf. Inf. Sci. and Syst. (CISS)}}
 
+%% Created for Giuseppe Durisi at 2014-12-09 15:08:07 +0100 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+@string{bstj = {Bell Syst. Tech. J.}}
+
+@string{ciss = {Conf. Inf. Sci. and Syst. (CISS)}}
+
+@string{infcontr = {Inf. Contr.}}
+
+@string{isit = {IEEE Int. Symp. Inf. Theory (ISIT)}}
+
+@string{j_ppi = {Prob. Peredachi Inform.}}
+
+
+@article{durisi14-12a,
+	Author = {Giuseppe Durisi and Tobias Koch and Johan \"{O}stman and Yury Polyanskiy and Wei Yang},
+	Date-Added = {2014-12-09 14:07:56 +0000},
+	Date-Modified = {2014-12-09 14:07:56 +0000},
+	Keywords = {giuseppe},
+	Month = dec,
+	Note = {in preparation},
+	Title = {Short-Packet Communications with Multiple Antennas: Transmit Diversity, Spatial Multiplexing, and Channel Estimation Overhead},
+	Year = {2014}}
 
 @article{PPV08,
-	author = "Y. Polyanskiy and H.~V.~Poor and Sergio Verd\'u",
-	title = "Channel coding rate in the finite blocklength regime",
-	journal = IEEE_J_IT, volume = 56, number = 5, month = may, pages="2307--2359",
-	year = 2010
-}
+	Author = {Y. Polyanskiy and H.~V.~Poor and Sergio Verd\'u},
+	Journal = IEEE_J_IT,
+	Month = may,
+	Number = 5,
+	Pages = {2307--2359},
+	Title = {Channel coding rate in the finite blocklength regime},
+	Volume = 56,
+	Year = 2010}
 
 @article{PPV10eneff,
-	author = "Y. Polyanskiy and H.~V.~Poor and Sergio Verd\'u",
-	title = "Minimum energy to send $k$ bits with and without feedback",
-	journal = IEEE_J_IT, 
-	month=aug, year=2011,number=8, volume=57, pages={4880--4902}
-}
+	Author = {Y. Polyanskiy and H.~V.~Poor and Sergio Verd\'u},
+	Journal = IEEE_J_IT,
+	Month = aug,
+	Number = 8,
+	Pages = {4880--4902},
+	Title = {Minimum energy to send $k$ bits with and without feedback},
+	Volume = 57,
+	Year = 2011}
