yury's feedback on the mimo block-fading section included

--- a/documentation/defs_giuseppe.tex
+++ b/documentation/defs_giuseppe.tex
@@ -1,8 +1,7 @@
-%!TEX root = /Users/giuseppedurisi/Dropbox/papers/DMTatFBL/paper/dowk_2014.tex
-\safemath{\txant}{m\sub{t}} %number of transmit antennas
-\safemath{\txantalt}{\widetilde{m}\sub{t}}
-\safemath{\rxant}{m\sub{r}} %number of receive antennas
-\safemath{\cohtime}{n\sub{c}} %time-frequency coherence length (in symbol times)
+\safemath{\txant}{m_{\mathrm{t}}} %number of transmit antennas
+\safemath{\txantalt}{\widetilde{m}_{\mathrm{t}}}
+\safemath{\rxant}{m_{\mathrm{r}}} %number of receive antennas
+\safemath{\cohtime}{n_{\mathrm{c}}} %time-frequency coherence length (in symbol times)
 \safemath{\bl}{n} %blocklength
 \safemath{\err}{\epsilon} %error rate
 \let\snr\undefined
@@ -11,21 +10,21 @@
 \safemath{\ncod}{M}
 % \let\complexset\undefined
 % \safemath{\complexset}{\amsbb{C}}
-\safemath{\realset}{\amsbb{R}}
-\safemath{\naturalset}{\amsbb{N}}
-\safemath{\Rmax}{R^*}
-\safemath{\Rmaxala}{R^*\sub{ala}}
-\safemath{\Rmaxp}{\Rmax(\tfdiv,\cohtime,\epsilon,\snr)}
-\safemath{\Rmaxalap}{\Rmaxala(\tfdiv,\cohtime,\epsilon,\snr)}
-\safemath{\Cerg}{C\sub{erg}}
-\safemath{\Cout}{C\sub{out}}
-\safemath{\Pout}{P\sub{out}}
-\safemath{\diversity}{d}
-\safemath{\multiplexing}{r}
-\safemath{\Pustm}{P_{\rmatX}^{\mathrm{u}}}
-\safemath{\maxantalt}{p}
-\safemath{\minantalt}{q}
-\safemath{\altgamma}{\widetilde{\gamma}}
-\newcommand{\infoden}[2]{\ensuremath{\imath\lefto({#1};{#2}\right)}} 	% expectation
-\safemath{\alshouffle}{e}
+% \safemath{\realset}{\amsbb{R}}
+% \safemath{\naturalset}{\amsbb{N}}
+% \safemath{\Rmax}{R^*}
+% \safemath{\Rmaxala}{R^*\sub{ala}}
+% \safemath{\Rmaxp}{\Rmax(\tfdiv,\cohtime,\epsilon,\snr)}
+% \safemath{\Rmaxalap}{\Rmaxala(\tfdiv,\cohtime,\epsilon,\snr)}
+% \safemath{\Cerg}{C\sub{erg}}
+% \safemath{\Cout}{C\sub{out}}
+% \safemath{\Pout}{P\sub{out}}
+% \safemath{\diversity}{d}
+% \safemath{\multiplexing}{r}
+% \safemath{\Pustm}{P_{\rmatX}^{\mathrm{u}}}
+% \safemath{\maxantalt}{p}
+% \safemath{\minantalt}{q}
+% \safemath{\altgamma}{\widetilde{\gamma}}
+% \newcommand{\infoden}[2]{\ensuremath{\imath\lefto({#1};{#2}\right)}}   % expectation
+% \safemath{\alshouffle}{e}
 
