corrected few typos on Ch.~3

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -294,7 +294,7 @@ To obtain the actual converse bound, a further optimization over these parameter
 For the $4\times 4$ case, the code provided assume that the optimization in~\cite[Eq.~(41)]{durisi14-12a} is restricted only to $\{\Sigma_k\}_{k=1}^{\tfdiv}$ of the form $\Sigma_1=\dots=\Sigma_\tfdiv=\Sigma$. In this case, \verb|pow_all| is a $4$-dimensional vector that contains the diagonal entries of $\Sigma$.
 
 
-\section{Alamouti: DT\_USTM\_Alamouti(), MC\_USTM\_Alamouti()} % (fold)
+\section{Alamouti: \texttt{DT\_USTM\_Alamouti()}, \texttt{MC\_USTM\_Alamouti()}} % (fold)
 \label{sec:alamouti}
 
 Format
@@ -309,7 +309,7 @@ function [R,current_eps]
 Compute achievability and converse bounds for a $2\times 2$ MIMO system with Alamouti used as inner code
 
 
-\section{Outage: \texttt{outage\_mi()}, \texttt{outage\_capacity\_alamouti()} } % (fold)
+\section{Outage: \texttt{outage\_mi()}, \texttt{outage\_alamouti()} } % (fold)
 \label{sec:outage}
 
 \begin{verbatim}
